# Silfur-Engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  premake5.lua
.va/user/: .vahashtags
Examples/Sandbox/logs/: app-logs_2023-02-14_14-04-22.txt  app-logs_2023-02-14_17-33-00.txt  app-logs_2023-09-21_00-07-49.txt  app-logs_2023-09-25_00-44-30.txt  app-logs_2023-09-25_18-46-22.txt  app-logs_2023-09-25_19-23-19.txt
Examples/Sandbox/src/: Game.cpp  Game.hpp  Sandbox.cpp  main.cpp
Silfur/: CMakeLists.txt
Silfur/src/: Silfur.h  Silfur.hpp  defines.hpp  hello.cpp  hello.hpp  sfpch.cpp  sfpch.h  sfpch.hpp
Silfur/src/core/: Application.cpp  Application.h  Application.hpp  Base.hpp  Core.h  Core.hpp  EntryPoint.hpp  Input.hpp  KeyCodes.hpp  MouseCodes.hpp  Version.hpp  VideoMode.cpp  VideoMode.h  Window.cpp  Window.h  Window.hpp  Window.inl  asserts.hpp
Silfur/src/core/Input/: Input.cpp  Input.hpp  KeyCodes.hpp
Silfur/src/core/events/: Event.hpp  EventBase.hpp  EventHandler.cpp  EventHandler.hpp  EventManager.cpp  EventManager.hpp  EventSystemType.hpp  EventType.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Silfur/src/core/input/: Helper.cpp  Helper.hpp  Input.cpp  Input.hpp  Keyboard.hpp  Mouse.hpp
Silfur/src/core/window/: VideoMode.cpp  VideoMode.hpp  Window.cpp  Window.hpp  Window.inl
Silfur/src/graphics/: RendererProperties.cpp  RendererProperties.hpp  RendererVulkan.cpp  RendererVulkan.h  RendererVulkan.hpp
Silfur/src/graphics/ImGui/: ImGuiBuild.cpp
Silfur/src/graphics/vulkan/: Instance.cpp  Instance.h  Instance.hpp  Instance.inl  InstanceVk.cpp  InstanceVk.hpp  RendererVk.cpp  RendererVk.hpp  ValidationLayers.h  VulkanInstance.cpp  VulkanInstance.hpp  VulkanLogicalDevice.cpp  VulkanLogicalDevice.hpp  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
Silfur/src/graphics/vulkan/debug/: Debug.hpp  Debug.inl  ValidationLayers.hpp  ValidationLayers.inl
Silfur/src/graphics/vulkan/utils/: Debug.hpp  Enums.hpp  Extensions.hpp  Extensions.inl  ValidationLayers.hpp  ValidationLayers.inl  VkHelpers.hpp
Silfur/src/platform/win32/: Win32_Window.cpp  Win32_Window.hpp
Silfur/src/utility/: Flags.hpp  StringUtils.cpp  StringUtils.hpp
Silfur/src/utility/log/: Log.cpp  Log.h  Log.hpp  LogChannel.cpp  LogChannel.h  LogChannel.hpp  LogChannelsMacros.cpp  LogChannelsMacros.h  LogChannelsMacros.hpp  LogCoreMacros.h  LogCoreMacros.hpp  LogMacros.h  LogMacros.hpp
Silfur/src/utils/: StringUtils.cpp  StringUtils.hpp
Silfur/src/utils/log/: Log.cpp  Log.hpp  LogChannel.cpp  LogChannel.hpp  LogChannelsMacros.hpp  LogCoreMacros.hpp  LogMacros.hpp
examples/: CMakeLists.txt
examples/Sandbox/: CMakeLists.txt  imgui.ini
examples/Sandbox/Shaders/: PixelShader.hlsl  VertexShader.hlsl
examples/Sandbox/shaders/: FragmentShader.frag  VertexShader.vert
examples/Sandbox/src/: Helpers.h  main.cpp
scripts/: CompileShaders.bat  FindVulkan.lua
